--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "databases",
     "CRUD_PHP"
   ],
-  "author": "maickwendell",
+  "author": "maickwendelldev",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/maickwendelldev/CRUD_PHP/issues"
